[metadata]
name = argo-probe-fedcloud 
version = 0.11.0
author = SRCE 
author_email = "dvrcic@srce.hr, eimamagi@srce.hr"
description = Package include probes for EGI FedCloud services
long_description = file: README.md
license = ASL 2.0
url = "https://github.com/ARGOeu-Metrics/argo-probe-fedcloud",
packages=["argo_probe_fedcloud"],

[options]
include_package_data = True
package_dir=
    =src
packages=find:
python_requires = >=3.8

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    cloudinfo = argo_probe_fedcloud.cloudinfo:main
    novaprobe = argo_probe_fedcloud.novaprobe:main
    swiftprobe = argo_probe_fedcloud.swiftprobe:main
